<resources>
    <string name="app_name">POI Pocket</string>
    <string name="submitPartial">SUBMIT PARTIAL</string>
    <string name="hint_mobile">Mobile Number</string>
    <string name="merchantName">Merchant Name</string>
    <string name="timing">Timing</string>
    <string name="Type">Type Of Shop</string>
    <string name="rating">Rating out of 10</string>
    <string name="latLong"><![CDATA[Latitude & Longitude]]></string>
    <string name="submit">Submit</string>
    <string name="home">Home</string>
    <string name="no_record">No Record Found</string>
    <string-array name="type">
        <item>Select Organization Type</item>
        <item>Medical</item>
        <item>Restaurant</item>
        <item>Petrol Pump</item>
        <item>Grocery Stall</item>
        <item>Hardware</item>
    </string-array>
</resources>
