<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/padding_20dp"
    tools:context=".Activity.ReportActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_50dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tab_view_border"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMerchantName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/merchantName"
                android:padding="@dimen/_5dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_20sp"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/tab_view_border"
            android:layout_weight="1">
            <TextView
                android:id="@+id/txtMerchantNumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/hint_mobile"
                android:padding="@dimen/_5dp"
                android:textStyle="bold"
                android:textSize="@dimen/text_20sp"/>
        </RelativeLayout>
    </LinearLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5dp"
        android:scrollbars="vertical"/>
    <TextView
        android:id="@+id/txt_noRecord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_record"
        android:visibility="gone"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20dp">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_50dp"
            android:layout_marginEnd="@dimen/padding_50dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/home"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/rewards_one"/>

    </RelativeLayout>


</LinearLayout>